HelloUltraviolet/Fixtures/RejectedSource/Comptime/ComptimePointerParameter/Expected.uv
//! Expected diagnostic metadata for the ComptimePointerParameter rejected-source specimen.

expectedDiagnostic("E-CTE-0011", "requirement.22.CompileTimeTypeAvailabilityRejection")
